<resources>
    <string name="app_name">Parking</string>
    <string name="user_info">Информация о пользователе</string>
    <string name="user_info_fio_change">Смена имени</string>
    <string name="user_info_email_change">Смена почты</string>
    <string name="FIO">ФИО пользователя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="are_you_sure">Вы уверены что хотите выйти из аккаунта?</string>
    <string name="sign_in_title">Вход</string>
    <string name="register_title">Регистрация</string>
    <string name="password_restoring">Восстоновление пароля</string>
    <string name="top_up_an_account">Пополнить счет</string>
    <string name="history">История</string>
    <string name="notifications">Уведомления</string>
    <string name="vehicle">Транспорт</string>
    <string name="rate_plan">Тарифные планы</string>
    <string name="buy_place">Купить паркоместо</string>
    <string name="faced_a_problem">Возникли проблемы?</string>
    <string name="user_rules">Правила пользования парковкой</string>
    <string name="entrance_rules">Правила въезда/выезда</string>
    <string name="about">О приложении</string>
    <string name="type">Тип</string>
    <string name="payed_till">Оплачено до</string>
    <string name="payment_type">Оплата</string>
    <string name="daily">Ежедневно</string>
    <string name="monthly">Помесечно</string>
    <string name="owner">Собственик</string>
    <string name="do_not_change">Не изменять</string>
    <string name="place">Место</string>
    <string name="current_tariff">Текущий тариф</string>
    <string name="change_tariff">Изменить тариф</string>
    <string name="gos_nomer">Гос. номер</string>
    <string name="tariff">Тариф</string>
    <string name="cards">Карты</string>
    <string name="enter_email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="register">Зарегестрироваться</string>
    <string name="exit">Выход</string>
    <string name="delete">Удалить</string>
    <string name="parking_place">Место</string>
    <string name="non_place">Выбрать место</string>
    <string name="car_id">Номер машыны</string>
    <string name="not_payed">Не оплачено</string>
    <string name="payed">Оплачено</string>
    <string name="choose_place">Выбрать место</string>
    <string name="no_place">Место не выбрано</string>
    <string name="add_vehicle">Добавить транспорт</string>
    <string name="vehicle_data">Информация о транспорте</string>
    <string name="card_number">Номер карты</string>
    <string name="card_main">Оснавная карта</string>
    <string name="card_secondary">Второстипенная карта</string>
    <string name="how_to_become_owner">Как стать собствеником?</string>
    <string name="plates">A000AA136</string>
    <string name="EM">EM</string>
    <string name="TID">TID</string>
    <string name="add_car_description">Вбивать цифры, выделенные знаком X</string>
    <string name="EM_desc">EM 000XXXXXXX 040, XXXXX</string>
    <string name="TID_desc">TID 00000XXXXX 000, XXXXX</string>
    <string name="doors">Двери</string>
    <string name="gates">Ворота</string>
    <string name="card1">Карта1</string>
    <string name="card2">Карта2</string>
    <string name="card3">Карта3</string>
    <string name="card4">Карта4</string>
    <string name="card5">Карта5</string>
    <string name="not_necessary">необязательно</string>
    <string name="necessary">обязательно</string>
    <string name="sign_in">Войти</string>
    <string name="sign_in_text">Войти в аккаунт</string>
    <string name="sign_up">Регистрация</string>
    <string name="phone">Телефон</string>
    <string name="email">Email</string>
    <string name="choose_payment_method">Выберете способ оплаты</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="send_msg">Отправить СМС</string>
    <string name="registry_notation">
        Минимальная длина: 8 символов. Должна быть хотябы 1 буква и 1 цифра Дополнительно можно использовать символы @$!%"#?&amp;
    </string>
    <string name="menu">меню</string>
    <string name="auto_renewal">Автопродление</string>
    <string name="from_internal_balance">Со внутренего счета</string>
    <string name="manually">Вручную</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Отчество</string>
    <string name="balance">Баланс</string>
    <string name="balance_after_payment">Баланс после пополнения: %1$d</string>
    <string name="to_buy">Для приобретения парковочного места в собственность обращайтесь по телефону:</string>
    <string name="phone_to_buy">+7(473)207–50–50</string>
    <string name="approve">Подтвердить</string>
    <string name="reject">Отмена</string>
    <string name="pay">Оплатить</string>
    <string name="move_on">Продолжить</string>
</resources>